<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:context=".DetailActivity">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher_background"
                tools:ignore="VectorDrawableCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:numStars="5" />

                <TextView
                    android:id="@+id/releaseLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/release_date"
                    android:textColor="@android:color/black"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/releaseDataTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:text="2/10/2010"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/synopsisLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/movie_overview"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/synopsisTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/video_label_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/videos"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/video_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/review_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/reviews"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/review_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>